--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -105,34 +105,23 @@
         </div>
         
       </section>
-      <section class="section section_02 item_02-01">
+      <section class="section section_02">
         <article class="content">
           <div class="text_effect">
-            <p>번거로운 미션은</p>
+            <span>번거로운 미션은</span>
           </div>
-        </article>
-      </section>
-      <section class="section section_02 item_02-02">
-        <article class="content">
           <div class="text_effect">
-            <p>이제 그만!</p>
+            <span>이제 그만!</span>
           </div>
-        </article>
-      </section>
-      <section class="section section_02 item_02-03">
-        <article class="content">
           <div class="text_effect">
-            <p>이제껏 없었던</p>
+            <span>이제껏 없었던</span>
           </div>
-        </article>
-      </section>
-      <section class="section section_02 item_02-04">
-        <article class="content">
           <div class="text_effect">
-            <p>유튜브 시청형 리워드 앱</p>
-          </div>
+            <span>유튜브 시청형<br /> 리워드 앱</span>
+          </div>      
         </article>
-      </section>
+            
+      </section>    
       <section class="section section_03">
         <div class="inner">
           <article class="content">
@@ -250,6 +239,7 @@ $('.slider').slick({
   fade: true,
   cssEase: 'linear',
 });
+$('.slider').slick('goTo', 0);
 </script>
 
 
