--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -179,6 +179,14 @@
 <script src="./resource/js/clipboard.min.js"></script>
 <script src="./resource/js/script.js"></script>
 <script>
+  function setScreenSize() {
+	let vh = window.innerHeight * 0.01;
+	document.documentElement.style.setProperty('--vh', `${vh}px`);
+}
+setScreenSize();
+window.addEventListener('resize', setScreenSize);
+</script>
+<script>
 // window.scrollY + document.documentElement.clientHeight === document.documentElement.scrollHeight;
   
   // 모바일 웹 100vh 세로 사이즈 문제해결
