--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>캐시메이트 소개 - 검색광고 페이지</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="stylesheet" href="https://codepen.io/GreenSock/pen/ZEGdQLM/7ba936b34824fefdccfe2c6d9f0b740b.css">
@@ -187,15 +187,15 @@ setScreenSize();
 window.addEventListener('resize', setScreenSize);
 </script>
 <script>
-// window.scrollY + document.documentElement.clientHeight === document.documentElement.scrollHeight;
+window.scrollY + document.documentElement.clientHeight === document.documentElement.scrollHeight;
   
-  // 모바일 웹 100vh 세로 사이즈 문제해결
-// function setScreenSize() {
-// 	let vh = window.innerHeight * 0.01;
-// 	document.documentElement.style.setProperty('--vh', `${vh}px`);
-// }
-// setScreenSize();
-// window.addEventListener('resize', setScreenSize);
+  //모바일 웹 100vh 세로 사이즈 문제해결
+function setScreenSize() {
+	let vh = window.innerHeight * 0.01;
+	document.documentElement.style.setProperty('--vh', `${vh}px`);
+}
+setScreenSize();
+window.addEventListener('resize', setScreenSize);
 
 (() => {
   const target = document.querySelector("section.section_02 .content");
