--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="btn_area_fixed">
-        <a href="#" class="btn_point">시작하기</a>
+        <a href="https://play.google.com/store/apps/details?id=kr.co.js.clipdownlite&referrer=utm_source%3Dnaversearchad" class="btn_point">시작하기</a>
       </div>
       <div class="box_bg">
         <img src="./resource/images/bg_01.png" alt="" class="bg_section">
