--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -5,6 +5,7 @@
   <title>캐시메이트 소개 - 검색광고 페이지</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="stylesheet" href="./resource/css/jquery.fullpage.min.css"/>  
