--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>캐시메이트 소개 - 검색광고 페이지</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">		
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <title>캐시메이트 소개 - 검색광고 페이지</title>
   <link rel="stylesheet" href="./resource/css/jquery.fullpage.min.css"/>  
   <link rel="stylesheet" href="./resource/js/slick/slick.css"/>
   <link rel="stylesheet" href="./resource/css/style.css">
@@ -125,12 +124,12 @@
               <span class="text_block bold">쿠폰 혜택!</span>                      
             </h1>   
             <div class="content_box">
-              <a href="#layer_popup" class="img_box code_clipboard btn_coupon" data-clipboard-text="QWER123">
+              <a href="#layer_popup" class="img_box code_clipboard btn_coupon" data-clipboard-text="CASHMATE">
                 <img src="./resource/images/img_coupon.png" alt="">
               </a>
             </div>
             <div class="guide_box">
-              <div class="text_guide">해당 포인트 쿠폰은 2023년 12월 31일까지 제공 됩니다.</div>
+              <div class="text_guide">해당 포인트 쿠폰은 2024년 01월 31일까지 제공 됩니다.</div>
               <div class="text_guide">포인트 쿠폰의 초대코드를 앱에 입력하셔야 혜택이 적용 됩니다.</div>
             </div>          
           </article>
@@ -146,7 +145,7 @@
                 <div class="popup_content">
                   <div class="content_box">
                     <h2 class="content_heading">
-                      <div class="code_box font_num">QWER123</div>
+                      <div class="code_box font_num">CASHMATE</div>
                       <div class="guide_text">
                           초대코드가 복사 되었습니다.
                       </div>
@@ -178,6 +177,7 @@
 <script src="./resource/js/script.js"></script>
 
 <script>
+
 (() => {
   const target = document.querySelector("section.section_02 .content");
   
