--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -72,7 +72,7 @@
                 </div>                                   
               </div>
               <!-- Slider item 03 -->
-              <div class="slide_item slide_03 ">
+              <div class="slide_item slide_03">
                 <div class="slide_title">					
                   <h3>
                     쌓은 포인트로 <br />
@@ -99,7 +99,7 @@
         </div>
         
       </section>
-      <section class="section section_02">
+      <section id="#scrollAuto" class="section section_02" style="overflow: auto;">
         <article class="content">
           <!-- <div class="text_effect">
             <span>번거로운 미션은</span>
