--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -177,6 +177,10 @@
 <script src="./resource/js/script.js"></script>
 
 <script>
+  
+</script>
+
+<script>
 
 (() => {
   const target = document.querySelector("section.section_02 .content");
