--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -240,6 +240,7 @@ $(document).ready(function() {
 		//options here
     css3: true,
     autoScrolling:true,
+    scrollOverflow : true,
     scrollHorizontally: false,
     scrollingSpeed: 700,
     sectionSelector: '.section'
