--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -14,12 +14,20 @@
 </head>
 <body>
   <div class="wrap">
+    <div class="content header">
+      <div class="inner">
+        <a href="#" class="logo_brand"><img src="./resource/images/logo_clipdownLite.png" alt=""></a>
+        <a href="https://m.clipdown.net/cashmate.php" class="menu_sub">
+          <span class="icon_bar"></span>
+          <span class="icon_bar"></span>
+          <span class="icon_bar"></span>
+        </a>
+      </div>
+      
+    </div>
     <div id="fullpage" class="fullpage">      
       <section class="section section_01">   
-        <div class="inner">
-          <article class="content header">
-            <a href="#" class="logo_brand"><img src="./resource/images/logo_clipdownLite.png" alt=""></a>
-          </article>             
+        <div class="inner">                       
           <article class="content">
             <h1 class="header_title">
               새로운<br />
