--- a/misc/list_accordian/list_faq.html
+++ b/misc/list_accordian/list_faq.html
@@ -31,24 +31,28 @@
                         <div id="accordion" class="accordion-list-box">
 							<!-- section 1 -->
 							<div class="acc-item">
-								<h3 class="acc-head"><span class="heade-title"><span class="style_q">Q.</span>백그라운드 재생은 불가능한가요?</span></h3>
+								<h3 class="acc-head">
+									<span class="heade-title">
+										<span class="style_q">Q.</span>
+										<span class="q_title">백그라운드 재생은 불가능한가요?</span>
+									</span>
+								</h3>
 								<div class="acc-contents">
 									<span class="style_aw">A.</span>
-									<p class="">
-									플레이 스토어 정책상 백그라운 재생 기능은 제공이 어려운 점 양해 부탁드립니다.								
-									</p>
-									<ul class="notice_desc_list">
-										<li class="notice_desc"><span class="dot">-</span>이벤트 참여 기간을 꼭 확인해주세요.</li>
-										<li class="notice_desc"><span class="dot">-</span>본 이벤트는 네이버페이 및 제휴사 사정에 의해 사전고지 없이 변경
-											혹은 종료될 수 있습니다.
-										</li>
-										<li class="notice_desc"><span class="dot">-</span>이벤트 혜택을 받기 위해서는 네이버페이 이용 약관에 동의하여야 하며,
-											혜택 지급 시점에 네이버페이를 탈퇴한 경우 지급이 불가합니다. <a href="https://m.pay.naver.com/mobile/agree?url=https%3A%2F%2Fcampaign2.naver.com%2Fnpay%2Fkingof2023%2F" class="point_link" target="_blank">약관동의하기 &gt;</a></li>
-										<li class="notice_desc"><span class="dot">-</span>부적절한 방법을 통한 이벤트 참여는 모두 취소되며, 법적 처벌을 받을
-											수 있습니다.
-										</li>
-									</ul>
-									
+									<div class="aw_des">
+										<p>플레이 스토어 정책상 백그라운 재생 기능은 제공이 어려운 점 양해 부탁드립니다.
+										<ul class="notice_desc_list">
+											<li class="notice_desc"><span class="dot">-</span>이벤트 참여 기간을 꼭 확인해주세요.</li>
+											<li class="notice_desc"><span class="dot">-</span>본 이벤트는 네이버페이 및 제휴사 사정에 의해 사전고지 없이 변경
+												혹은 종료될 수 있습니다.
+											</li>
+											<li class="notice_desc"><span class="dot">-</span>이벤트 혜택을 받기 위해서는 네이버페이 이용 약관에 동의하여야 하며,
+												혜택 지급 시점에 네이버페이를 탈퇴한 경우 지급이 불가합니다. <a href="https://m.pay.naver.com/mobile/agree?url=https%3A%2F%2Fcampaign2.naver.com%2Fnpay%2Fkingof2023%2F" class="point_link" target="_blank">약관동의하기 &gt;</a></li>
+											<li class="notice_desc"><span class="dot">-</span>부적절한 방법을 통한 이벤트 참여는 모두 취소되며, 법적 처벌을 받을
+												수 있습니다.
+											</li>
+										</ul>		
+									</div>
 								</div>
 							</div>
 							<!-- section 2 -->
@@ -63,12 +67,12 @@
 							</div>
 							<!-- section 3 -->
 							<div class="acc-item">
-								<h3 class="acc-head"><span class="heade-title"><span class="style_q">Q.</span>PIP 모드가 무엇인가요?</span></h3>
+								<h3 class="acc-head"><span class="heade-title"><span class="style_q">Q.</span>PIP 모드가 무엇인가요?</span></h3>								
 								<div class="acc-contents">
 									<span class="style_aw">A.</span>
-									<p>
-									소형 플레이어를 통해 다른 앱 이용중에도 영상 시청을 가능하게 해주는 기능입니다.										
-									</p>
+									<div class="aw_des">
+										<p>소형 플레이어를 통해 다른 앱 이용중에도 영상 시청을 가능하게 해주는 기능입니다.	</p>
+									</div>
 								</div>										
 							</div>
 							<!-- section 4 -->
@@ -76,10 +80,10 @@
 								<h3 class="acc-head"><span class="heade-title"><span class="style_q">Q.</span>로그인을 해야 광고가 제거 되나요?</span></h3>
 								<div class="acc-contents">
 									<span class="style_aw">A.</span>
-									<p>
-									로그인에 상관없이 모든 동영상은 광고 없이 시청이 가능합니다.								
-									</p>
-								</div>										
+									<div class="aw_des">
+										<p>로그인에 상관없이 모든 동영상은 광고 없이 시청이 가능합니다.</p>
+									</div>
+								</div>
 							</div>
 						</div>
                     </article>
