--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
                                             <div class="alert">
                                                 <p class="lead lead_text">Description</p>                                     
                                             </div>
-                                        </li>
-                                        
+                                        </li>                                        
                                     </ul>
                                 </div>
                             </div>                            
@@ -84,6 +83,32 @@
                 </div>
                 <!-- 2023 퍼블리싱작업 영역 -->
                 <div class="tab-pane fade show" id="pills-2023" role="tabpanel" aria-labelledby="pills-2023-tab">
+                    <section class="contents_section">
+                        <article class="list-pagelink">
+                            <div class="card">
+                                <div class="card-header">
+                                    <span>네이버 광고 검색 렌딩페이지</span>
+                                    <span class="float-end">2023.12.15</span>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text"> 
+                                        -  네이버 검색광고에 노출되는 모바일 랜딩페이지 퍼블리싱 작업<br />
+                                        - 작업내용 : https://jsfuture.atlassian.net/browse/PMT-355
+                                    </p>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/misc/searchAD/index.html" target="_blank">캐시메이트 소개 랜딩페이지</a>
+                                            <span class="float-end">2023.12.15</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- 모바일만 노출되는 Web페이지</p>
+                                                <p class="lead lead_text">- 페이지 스크롤 형식으로 Section 화면 전체가 보이게 노출</p>                                                   
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </article>
+                    </section> 
                     <section class="contents_section">
                         <article class="list-pagelink">
                             <div class="card">
