--- a/index.html
+++ b/index.html
@@ -60,19 +60,26 @@
                         <article class="list-pagelink">
                             <div class="card">
                                 <div class="card-header">
-                                    <span>Project Title</span>
-                                    <span class="float-end">End date of work</span>
+                                    <span>네이버 광고 검색 랜딩페이지 2차 수정작업</span>
+                                    <span class="float-end">2024.02.01</span>
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
-                                    Details of work
+                                    - 안드로이드 유저 : 플레이스토어로 이동<br />
+                                    - iOS 유저 대상으로 제공 될 안내 문구와 공유하기 버튼 교체 작업<br />
+                                    
+                                    - 작업내용 : https://jsfuture.atlassian.net/browse/PMT-365
                                     </p>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
-                                            <a href="#" target="_blank">Link to task page</a>
-                                            <span class="float-end">End date of work</span>
+                                            <a href="../jsfuture/clipdown/2024/webview/ad_search/index.html" target="_blank">iOS유저 대상 랜딩페이지</a>
+                                            <span class="float-end">2024.02.01</span>
                                             <div class="alert">
-                                                <p class="lead lead_text">Description</p>                                     
+                                                <p class="lead lead_text">
+                                                    - 서브페이지 숨김처리 <br />
+                                                    - 메인화면  타이틀 문구 변경 <br />
+                                                    - 메인화면 하단영역 iOS 유저 안내문구 추가
+                                                </p>                                     
                                             </div>
                                         </li>                                        
                                     </ul>
